# tetris-sfml

./: .gitignore  CMakeLists.txt  COPYING  run.sh
assets/: .gitignore  build_assets.sh
assets/src/: main_menu.xcf
doc/: blockinput  especificacao.md  layout_blocks1.html  layout_blocks2.html  layout_blocks3.html  layout_colors.html  states.dia
sandbox/: CMakeLists.txt  blocks.cpp  braces.cpp  game_prototype.cpp  sound_test  sound_test.cpp  teste_umap.cpp
src/: CMakeLists.txt
src/MXG/: Application.cpp  Application.hpp  DefaultState.hpp  Game.cpp  Game.hpp  Random.cpp  Random.hpp  State.hpp
src/Tetris/: App.cpp  App.hpp  Application.cpp  Application.hpp  Assets.cpp  Assets.hpp  BlockRenderer.cpp  BlockRenderer.hpp  Config.hpp.in  Defs.hpp  Main.cpp  Utils.cpp  Utils.hpp
src/Tetris/Game/: Tetris.cpp  Tetris.hpp  Tetromino.cpp  Tetromino.hpp
src/Tetris/GameObjects/: BlockRenderer.cpp  BlockRenderer.hpp  GameArea.cpp  GameArea.hpp  GameMenu.cpp  GameMenu.hpp  GameObject.hpp  GameOver.cpp  GameOver.hpp  RandomMiniBlocks.cpp  RandomMiniBlocks.hpp  Tetromino.cpp  Tetromino.hpp
src/Tetris/States/: DefaultState.cpp  DefaultState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp
src/mxg/: Application.cpp  Application.hpp  DefaultState.hpp  Game.cpp  Game.hpp  State.hpp
test/: CMakeLists.txt  tetris_test.cpp  tetromino_test.cpp
